# workflow-tools

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py  mcp_server.py
app/api/: routes.py
app/core/: config.py  date_utils.py  logging.py
app/db/: repository.py
app/models/: __init__.py  domain.py
app/services/: capability_runner.py  intelligence.py  orchestrator.py  retrieval.py  workflow_registry.py
app/services/providers/: __init__.py  base.py  demo_calendar.py  registry.py
docs/: article.md
tests/: conftest.py
tests/integration/: test_api_conversations.py
tests/unit/: test_intelligence.py  test_mcp_server.py  test_orchestrator.py  test_retrieval.py  test_workflow_registry.py
workflows/: book_client_meeting.yaml  close_client_account.yaml  create_wire_transfer.yaml  escalate_compliance_case.yaml  generate_monthly_portfolio_report.yaml  lookup_client_profile.yaml  open_client_account.yaml  schedule_vendor_payment.yaml  setup_client_subscription.yaml  update_client_billing_address.yaml  update_client_mailing_address.yaml
